// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transformer decorators should add Bean metadata to a class when decorated with @UseTransformers 1`] = `
[
  DecoratorFactory {
    "ids": [
      "test",
    ],
  },
]
`;

exports[`transformer decorators should add Bean metadata to a param when decorated with @UseTransformers 1`] = `
[
  [
    [Function],
  ],
  [
    [Function],
    DecoratorFactory {
      "ids": [
        "test",
      ],
    },
  ],
  [
    [Function],
  ],
]
`;

exports[`transformer decorators should add Bean metadata to a prop when decorated with @UseTransformers 1`] = `
{
  "test2Method": [
    DecoratorFactory {
      "ids": [
        "test2",
      ],
    },
  ],
  "testMethod": [
    DecoratorFactory {
      "ids": [
        "test",
      ],
    },
  ],
}
`;

exports[`transformer decorators should add Bean metadata to class, prop and param when decorated with @UseTransformers 1`] = `
[
  DecoratorFactory {
    "ids": [
      "testClass",
    ],
  },
]
`;

exports[`transformer decorators should add Bean metadata to class, prop and param when decorated with @UseTransformers 2`] = `
{
  "testMethod": [
    DecoratorFactory {
      "ids": [
        "testMethod",
      ],
    },
  ],
}
`;

exports[`transformer decorators should add Bean metadata to class, prop and param when decorated with @UseTransformers 3`] = `
[
  [
    [Function],
    DecoratorFactory {
      "ids": [
        "testParam",
      ],
    },
  ],
]
`;
